--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ collections:
 navigation:
   - title: 主页 Home
     link: /
-  - title: 科研项目 Research
+  - title: 学习项目 Research
     link: /research.html
-  - title: 论文 Publications
+  - title: 课题 Publications
     link: /publications.html
